# omniverse-v2

./: .coverage  .gitignore  0001-fix-schema-drift-broken-tests-and-pipeline-safety-bugs.patch  0003-frontend-integration-reset-db-fixes-and-tests.patch  0004-universe-service-repo-crash-fix.patch  0005-predicate-alias-and-settingsdb-init-fixes.patch  AGENTS.md  API_RESTRUCTURE_COMPLETE.md  API_RESTRUCTURE_FINAL_SUMMARY.md  API_RESTRUCTURE_SUMMARY.md  CHANGELOG.md  CHANGES_MADE.md  IMPLEMENTATION_SUMMARY.md  README.md  RESEARCH_RESULTS_VIEWER.md  UI_AUDIT_REPORT.md  UI_REMEDIATION_COMPLETE.md  fix_all_tests.py  fix_indentation.py  fix_indentation_v2.py  fix_researcher.py  lint.sh  lint_output.txt  pytest.ini  reproduce_error.py  reproduce_issue.py  reproduce_web_fetch.py  researcher_results.txt  run.sh  run_tests.sh  settings.db-journal  setup.cfg  setup.sh  test.html  test.sh  test_raise.py  test_results.txt  test_syntax.py  verify_pagination.py
backend/: .coverage  .env.local  0002-path-level-inference-rules-and-tests.patch  alembic-v2.ini  backend_log.txt  conftest.py  migrate_claims.py  pyproject.toml  pytest-v2.ini  pytest.ini  requirements-dev.txt  requirements.txt  test_api_endpoints.py  unconfirmed.db.bak
backend/alembic_v2/: env.py
backend/app/: main.py  main_test.py
backend/data/: adservers.txt
backend/loop/: db_manager.py  http_api.py  improvement_tracker.py  log_monitor.py  loop_config.py  orchestrator.py  research_client.py  run_agent_analysis.py  run_pipeline_loops.py  server_manager.py
backend/scripts/: cleanup_worlds_general.py  migrate_claims.py  migrate_settings.py  migrate_universe_metadata_to_artifacts.py
backend/tests/: conftest.py  factories.py  fake_llm_server.py  integration_ui_api.py  provider_config.py.example  test_agent_engine.py  test_agent_reporting.py  test_api.py  test_browser.py  test_context.py  test_core_upgrades.py  test_core_validation.py  test_db.py  test_db_init.py  test_extrapolation.py  test_file_logs.py  test_flow_view.py  test_focused_search.py  test_gpu_detection.py  test_health_reset.py  test_htmx_research.py  test_index.py  test_index_view.py  test_inference_api.py  test_inference_engine.py  test_inference_full_cycle.py  test_inference_rule_service.py  test_inference_view.py  test_logs.py  test_logs_view.py  test_nodes.py  test_ocr_importer.py  (+59 more)
(+482 files in other folders)
