
[project]
name = "omniverse-v2-backend"
version = "2.0.0"
description = "Asynchronous multi-agent LangGraph platform for fictional power tiering"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "pydantic",
    "langchain",
    "langgraph",
    "litellm",
    "aiohttp>=3.14.1",
    "cloakbrowser",
    "beautifulsoup4",
    "pydantic-settings",
    "httpx2>=2.0.0",
    "httpx",
    "trafilatura",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: mark test as slow running",
    "network: mark test as requiring network access",
]
addopts = "-m \"not network and not slow\""

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N",          # core: errors, style, imports, naming
    "UP",                              # pyupgrade: modernize syntax
    "C4",                              # comprehensions
    "SIM",                             # simplify
    "TID",                             # tidy imports
    "ARG",                             # unused args
    "PTH",                             # pathlib
    "B",                               # flake8-bugbear
    "RUF",                             # ruff-specific
    "RET",                             # unnecessary return/continue/break
    "G",                               # logging format
    "SLOT",                            # slotted classes
    "TRY",                             # try/except
    "FLY",                             # flynt (f-strings)
    "PERF",                            # performance
    "FURB",                            # refurb
    "ASYNC",                           # asyncio
    "ERA",                             # commented-out code
    "LOG",                             # logging
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["ARG", "TRY", "ERA", "PTH", "SLOT", "ASYNC"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "list"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
